namespace HospitalRegistrar.Domain.Common;

public class BaseEntity
{
    public int Id { get; set; }
}