namespace HospitalRegistrar.Features.TimeSlotFeatures;

public record CreateTimeSlotDto
{
    
}